tests/fail/test-neg-invChar01.tds
#
integer cont;
integer sum(){
    cont = cont + 1;
}